# Roadef2018

./: CMakeLists.txt  README.md  build.sh  cmd.sh  generator.py  move_list.txt  test_list.txt
dataset/: A10_solution.csv  A11_solution.csv  A12_solution.csv  A13_solution.csv  A14_solution.csv  A15_solution.csv  A16_solution.csv  A17_solution.csv  A18_solution.csv  A1_solution.csv  A20_solution.csv  A2_batch.csv  A2_solution.csv  A3_solution.csv  A4_solution.csv  A5_solution.csv  A6_solution.csv  A7_solution.csv  A8_solution.csv  A9_solution.csv
dataset/A/: A10_solution.csv  A11_solution.csv  A12_solution.csv  A13_solution.csv  A14_solution.csv  A15_solution.csv  A16_solution.csv  A17_solution.csv  A18_solution.csv  A19_solution.csv  A20_solution.csv  A2_solution.csv  A3_solution.csv  A4_solution.csv  A5_solution.csv  A6_solution.csv  A7_solution.csv  A8_solution.csv  A9_solution.csv
dataset/B/: B10_solution.csv  B11_solution.csv  B12_solution.csv  B13_solution.csv  B14_solution.csv  B15_solution.csv  B1_solution.csv  B2_solution.csv  B3_solution.csv  B4_solution.csv  B5_solution.csv  B6_solution.csv  B7_solution.csv  B8_solution.csv  (+1 more)
include/: cut_merger.hpp  cut_packer.hpp  defect.hpp  io_problem.hpp  item.hpp  merger.hpp  merger_move.hpp  move.hpp  node.hpp  ordering_heuristic.hpp  packer.hpp  packer_front.hpp  packer_move.hpp  params.hpp  pareto_front.hpp  plate_merger.hpp  plate_packer.hpp  problem.hpp  rectangle.hpp  row_merger.hpp  row_packer.hpp  row_packer_ng.hpp  sequence_merger.hpp  sequence_packer.hpp  solution.hpp  solution_checker.hpp  solver.hpp  solver_params.hpp  utils.hpp
src/: cut_merger.cpp  cut_packer.cpp  io_problem.cpp  main.cpp  merger.cpp  merger_move.cpp  move.cpp  ordering_heuristic.cpp  packer.cpp  packer_front.cpp  packer_move.cpp  params.cpp  plate_merger.cpp  plate_packer.cpp  problem.cpp  row_merger.cpp  row_packer.cpp  row_packer_ng.cpp  sequence_merger.cpp  sequence_packer.cpp  solution.cpp  solution_checker.cpp  solver.cpp  utils.cpp
utils/: cmd.sh  move_test.sh  test_list.txt
(+24 files in other folders)
